<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_main"
        android:title="@string/nav_main"/>

    <item
        android:id="@+id/nav_about"
        android:title="@string/nav_about"/>

    <item android:title="@string/nav_group_basic">
        <menu>
            <item
                android:id="@+id/nav_render_svg_to_image"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_render_to_image"/>
        </menu>
    </item>

    <item android:title="@string/nav_group_effects">
        <menu>
            <item
                android:id="@+id/nav_colour_change"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_colour_change"/>
        </menu>
    </item>

    <item android:title="@string/nav_group_animation">
        <menu>
            <item
                android:id="@+id/nav_line_draw_animation"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_line_drawing"/>
            <item
                android:id="@+id/nav_line_draw_and_image_animation"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/nav_line_drawing_and_image"/>
        </menu>
    </item>

</menu>
